<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:background="@drawable/shape_background_dialog"
        android:elevation="2dp"
        android:paddingBottom="16dp">


        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/cairo_regular"
            android:text="Send Email"
            android:textColor="@color/white"
            android:textSize="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view" />

        <View
            android:id="@+id/view"
            android:layout_width="50dp"
            android:layout_height="0.8dp"
            android:layout_marginTop="16dp"
            android:background="@color/secondery_hint"
            app:layout_constraintEnd_toEndOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toTopOf="parent" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtLayoutName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12sp"
            android:layout_marginStart="24sp"
            android:layout_marginEnd="24sp"
            android:textColorHint="@color/box_input_text_color"
            app:boxStrokeColor="@color/box_input_text_color"
            app:hintTextColor="@color/box_input_text_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtEmailfrom"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="From"
                android:inputType="textEmailAddress"
                android:textColorHint="@color/box_color"
                android:textCursorDrawable="@drawable/shape_curser"
                android:imeOptions="actionNext"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtLayoutEmail"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="24sp"
            android:layout_marginEnd="24sp"
            android:textColorHint="@color/box_input_text_color"
            app:boxStrokeColor="@color/box_input_text_color"
            app:hintTextColor="@color/box_input_text_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtLayoutName">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtEmailTo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="To"
                android:inputType="textEmailAddress"
                android:textColorHint="@color/box_color"
                android:textCursorDrawable="@drawable/shape_curser"
                android:imeOptions="actionDone"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtLayoutNote"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="24sp"
            android:layout_marginEnd="24sp"
            android:textColorHint="@color/box_input_text_color"
            app:boxStrokeColor="@color/box_input_text_color"
            app:hintTextColor="@color/box_input_text_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtLayoutEmail">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtEmailNote"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="Note"
                android:gravity="start"
                android:textColorHint="@color/box_color"
                android:textCursorDrawable="@drawable/shape_curser"
                android:imeOptions="actionDone"
                android:maxLines="5"
                android:lines="5"
                android:inputType="textMultiLine"
                android:singleLine="true"
                android:textColor="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list_Category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="horizontal"
            android:visibility="gone"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@+id/txtLayoutNote"
            tools:layout_editor_absoluteX="0dp"
            tools:listitem="@layout/item_category_liner" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_Save"
            style="@style/focusInClick"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:layout_marginStart="24sp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="24sp"
            android:backgroundTint="@color/secondery_background_color"
            android:fontFamily="@font/cairo_semibold"
            android:text="Send"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="18dp"
            android:textStyle="bold"
            app:cornerRadius="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/list_Category" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>