<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/settingsFragment"
        android:icon="@drawable/selector_settings"
        android:title="Setting"/>

    <item
        android:id="@+id/listCategoryFragment"
        android:icon="@drawable/selector_category"
        android:title="List" />


    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/selector_home"
        android:title="Home" />

    <item
        android:id="@+id/add"
        android:icon="@drawable/selector_add"
        android:title="Add" />

</menu>