...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="Username"
                android:textColorHint="@color/box_color"
                android:textCursorDrawable="@drawable/shape_curser"
                android:imeOptions="actionNext"
...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtLayoutName">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtEmail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="E-mail"
                android:textColorHint="@color/box_color"
                android:textCursorDrawable="@drawable/shape_curser"
                android:imeOptions="actionDone"
...
