...
            android:textSize="22sp"
            android:layout_marginStart="16sp"
            app:layout_constraintStart_toEndOf="@+id/tvback"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/tvAddEmail"
            style="@style/focusInClick"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginEnd="16sp"
            app:cardBackgroundColor="@color/secondery_background_color"
            app:cardCornerRadius="50dp"
...
